--- a/config/verify.html
+++ b/config/verify.html
@@ -8,7 +8,7 @@
     <h1>Email Confirmation</h1>
     <h2>Hello ${name}</h2>
     <p>Thank you for subscribing. Please confirm your email by clicking on the following link</p>
-    <a href=${process.env.DOMAIN}/auth/confirm/${confirmationCode}> Click here</a>
+    <a href=${process.env.CLIENT_APP_URL}/auth/confirm/${confirmationCode}> Click here</a>
     </div>
 </body>
 
